# keystoneauth-websso

./: CHANGELOG.md  README.md  pyproject.toml  renovate.json  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml  test.yml
keystoneauth_openid/: exceptions.py  loading.py  plugin.py
keystoneauth_websso/: exceptions.py  loading.py  plugin.py
