[metadata]
name = keystoneauth-openid
summary = CLI OpenID Connect support for OpenStack keystoneauth library
description-file =
    README.md
description-content-type = text/markdown; charset=UTF-8
author = Jeremy Lee
author-email = jeremy.lee1664@gmail.com
# home-page = https://github.com/vexxhost/keystoneauth-openid
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    keystoneauth_websso

[entry_points]
keystoneauth1.plugin =
    v3websso = keystoneauth_websso.loading:OpenIDConnect
